--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ sentences long so folks can pick up some informative tidbits. Then, link
 
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading">My temporary website</h1>
+          <h1 class="jumbotron-heading">Wiktorpp's temporary website</h1>
           <p class="lead text-muted">This website is temporary.</p>
           <p>
             <a href="https://github.com/wiktorpp/" class="btn btn-primary my-2">My github</a>
