--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ sentences long so folks can pick up some informative tidbits. Then, link
           <p class="lead text-muted">This website is temporary.</p>
           <p>
             <a href="https://github.com/wiktorpp/" class="btn btn-primary my-2">My github</a>
-            <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+            <a href="https://discord.com/channels/@me/718095378049794068" class="btn btn-secondary my-2">My discord</a>
           </p>
         </div>
       </section>
