--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ sentences long so folks can pick up some informative tidbits. Then, link
             <div class="col-sm-4 offset-md-1 py-4">
               <h4 class="text-white">Contact</h4>
               <ul class="list-unstyled">
-                <li><a href="#" class="text-white">Follow on Twitter</a></li>
-                <li><a href="#" class="text-white">Like on Facebook</a></li>
-                <li><a href="#" class="text-white">Email me</a></li>
+                <li><a href="https://twitter.com/wiktorpyk" class="text-white">Follow on Twitter</a></li>
+                <li><a href="https://www.reddit.com/user/williamrenken24" class="text-white">Like on Reddit</a></li>
+                <li><a href="mailto:grazynapp65@gmail.com" class="text-white">Email me</a></li>
               </ul>
             </div>
           </div>
