--- a/contact/index.html
+++ b/contact/index.html
@@ -51,7 +51,7 @@
       <main role="main" class="inner cover" style="display: flex; justify-content: center;  top: 50%; left: 50%;">
         <!--
         <h1 class="cover-heading">Cover your page.</h1> -->
-        <h2 class="center">My name is Wiktor. Please hire me.</h2>
+        <h2 class="center">Work in progress</h2>
         <!-- 
         <p class="lead">
           <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
