--- a/socials/index.html
+++ b/socials/index.html
@@ -25,7 +25,7 @@
       </style>
   </head>
 
-  <body class="text-center">
+  <body>
     <nav class="navbar navbar-expand navbar-dark bg-dark">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -47,17 +47,22 @@
     </nav>
     
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-      <!--What the hell am I doing? -->
-      <main role="main" class="inner cover" style="display: flex; justify-content: center;  top: 50%; left: 50%;">
-        <!--
-        <h1 class="cover-heading">Cover your page.</h1> -->
-        <h2 class="center">Work in progress</h2>
-        <!-- 
-        <p class="lead">
-          <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-        </p>
-        s-->
-      </main>
+
+      <a href="https://github.com/wiktorpp/">
+        <img style="float:left; display:inline-block; clear:both; top: 50%; transform: translateY(10%);" src="https://image.flaticon.com/icons/png/512/25/25231.png" width="24" height="24">
+        <h5> @wiktorpp</h5>
+      </a>
+      
+      <a href="https://twitter.com/wiktorpyk">
+        <img style="float:left; display:inline-block; clear:both; top: 50%; transform: translateY(30%);" src="https://seeklogo.com/images/D/discord-black-logo-733DD6B9B0-seeklogo.com.png" width="24">
+        <h5> @wiktorpp#9315</h5>
+      </a>
+
+      <a href="https://twitter.com/wiktorpyk">
+        <svg style="float:left; display:inline-block; clear:both; top: 50%; transform: translateY(5%);" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/></svg>
+        <h5> @wiktorpyk</h5>
+      </a>
+
 
     </div>
 
