--- a/socials/index.html
+++ b/socials/index.html
@@ -33,11 +33,11 @@
 
       <div class="collapse navbar-collapse" id="navbarsExample02">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
           <li class="nav-item">
-            <a class="nav-link" href="/socials">My Socials</a>
+            <a class="nav-link" href="/.">Home</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/socials">My Socials <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/contact">Contact me</a>
