Fixed issues regarding page height

--- a/contact/index.html
+++ b/contact/index.html
@@ -46,7 +46,7 @@
       </div>
     </nav>
     
-    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+    <div class="cover-container d-flex p-3 mx-auto flex-column">
       <!--What the hell am I doing? -->
       <main role="main" class="inner cover" style="display: flex; justify-content: center;  top: 50%; left: 50%;">
         <!--
