--- a/socials/index.html
+++ b/socials/index.html
@@ -46,7 +46,7 @@
       </div>
     </nav>
     
-    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+    <div class="cover-container d-flex p-3 mx-auto flex-column">
 
       <a href="https://github.com/wiktorpp/">
         <img style="float:left; display:inline-block; clear:both; top: 50%; transform: translateY(10%);" src="https://image.flaticon.com/icons/png/512/25/25231.png" width="24" height="24">
