--- a/socials/index.html
+++ b/socials/index.html
@@ -53,7 +53,7 @@
         <h5> @wiktorpp</h5>
       </a>
       
-      <a href="https://twitter.com/wiktorpyk">
+      <a href="https://discord.com/channels/@me/718095378049794068">
         <img style="float:left; display:inline-block; clear:both; top: 50%; transform: translateY(30%);" src="https://seeklogo.com/images/D/discord-black-logo-733DD6B9B0-seeklogo.com.png" width="24">
         <h5> @wiktorpp#9315</h5>
       </a>
