--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <div class="links">
       <!-- Code Platforms -->
-      <a href="https://github.com/wiktorpp/" target="_blank">GitHub</a>
+      <a href="https://github.com/wiktorpyk/" target="_blank">GitHub</a>
       <a href="https://gitlab.com/wiktorpp" target="_blank">GitLab</a>
       <a href="https://gitlab.postmarketos.org/wiktorpp" target="_blank">PostmarketOS GitLab</a>
       <a href="https://gitlab.alpinelinux.org/wiktorpp" target="_blank">Alpine Linux GitLab</a>
