--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
       <!-- Communication & Creative -->
       <a href="https://matrix.to/#/@wiktorpyk04:matrix.org" target="_blank">Matrix</a>
       <a href="https://wiktorpp.itch.io" target="_blank">Itch.io</a>
+
+      <a href="https://www.youtube.com/@wiktorpp" target="_blank">YouTube</a>
+      <a href="https://odysee.com/@wiktorpyk:0" target="_blank">Odysee</a>
+
     </div>
   </main>
 
