--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 <body>
   <main>
     <h1>Wiktor Pyk</h1>
+    <p>Your local neuro-spicy dipshit</p>
+    <p>Certified Dumbass™</p>
 
     <div class="links">
       <!-- Code Platforms -->
@@ -65,8 +67,7 @@
       <a href="https://gitlab.com/wiktorpp" target="_blank">GitLab</a>
       <a href="https://gitlab.postmarketos.org/wiktorpp" target="_blank">PostmarketOS GitLab</a>
       <a href="https://gitlab.alpinelinux.org/wiktorpp" target="_blank">Alpine Linux GitLab</a>
-      
-      <!-- Coding Challenges -->
+
       
       <!-- Wikis -->
       <a href="https://wiki.postmarketos.org/wiki/User:Wiktorpyk6" target="_blank">PostmarketOS Wiki</a>
