--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
 <body>
   <main>
     <h1>Wiktor Pyk</h1>
-    <p>Your local neuro-spicy dipshit</p>
-    <p>Certified Dumbass™</p>
+    <p>Your local neuro-spicy dipshit • Certified Dumbass™</p>
 
     <div class="links">
       <!-- Code Platforms -->
