--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 
       <a href="https://www.youtube.com/@wiktorpp" target="_blank">YouTube</a>
       <a href="https://odysee.com/@wiktorpyk:0" target="_blank">Odysee</a>
-
+      <a href="https://archive.org/details/@wiktorpyk" target="_blank">Internet Archive</a>
+      
     </div>
   </main>
 
