Add Gnome GitLab link to index.html

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       <a href="https://gitlab.com/wiktorpp" target="_blank">GitLab</a>
       <a href="https://gitlab.postmarketos.org/wiktorpp" target="_blank">PostmarketOS GitLab</a>
       <a href="https://gitlab.alpinelinux.org/wiktorpp" target="_blank">Alpine Linux GitLab</a>
+      <a href="https://gitlab.gnome.org/wiktorpyk" target="_blank">Gnome GitLab</a>
 
       
       <!-- Wikis -->
