Add Hackaday link to index.html

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       <a href="https://archive.org/details/@wiktorpyk" target="_blank">Internet Archive</a>
       <a href="https://www.youtube.com/@wiktorpp" target="_blank">YouTube</a>
       <a href="https://odysee.com/@wiktorpyk:0" target="_blank">Odysee</a>
+      <a href="https://hackaday.io/wiktorpyk" target="_blank">Hackaday</a>
       
     </div>
   </main>
